package eapli.ecourse.postit.domain;

public enum ContentType {
    TEXT, IMAGE
}
